[package]
name = "bls"
version = "0.1.3"
authors = []
edition = "2021"

[lib]
name = "bls"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36.1"
bls12_381 = { git = "https://github.com/vans163/bls12_381", branch = "main", features = ["experimental"] }
pairing = "0.23.0"
group = "0.13.0"
sha2 = "=0.10.8"
rayon = "1.10.0"